--- a/systemCProcessor.vcxproj.filters
+++ b/systemCProcessor.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="systemCProcessor.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="registersModule.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
