--- a/systemCProcessor.vcxproj
+++ b/systemCProcessor.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="registersModule.cpp" />
     <ClCompile Include="systemCProcessor.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
