--- a/systemCProcessor.vcxproj.filters
+++ b/systemCProcessor.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="memorySystemModule.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="controlModule.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
