--- a/systemCProcessor.vcxproj.filters
+++ b/systemCProcessor.vcxproj.filters
@@ -27,5 +27,13 @@
     <ClCompile Include="controlModule.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="structHeaders.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
